Add disk space cleanup step in Docker workflow
Added a step to free up disk space on Ubuntu before building the Docker image.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,19 @@ jobs:
       packages: write
 
     steps:
+      # --- NEW STEP: FREE UP DISK SPACE ---
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # Free up space by removing unnecessary tools
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
